--- a/ELearning/src/main/resources/application.properties
+++ b/ELearning/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 
-spring.data.mongodb.uri=mongodb://localhost/ELearning
-spring.data.mongodb.auto-index-creation= true
+#spring.data.mongodb.uri=mongodb://localhost/ELearning
+#spring.data.mongodb.auto-index-creation= true
+
+spring.data.mongodb.uri=mongodb://127.0.0.1:27017/ELearning?ssl=false
